deploy/svc.solana.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: dgraphql-v1
    monitor: prometheus
    version: v1
  name: dgraphql-v1
  namespace: sol-mainnet
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http-dgraphql
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: prometheus
    port: 9102
    protocol: TCP
    targetPort: 9102
  selector:
    app: dgraphql-v1
    version: v1
  sessionAffinity: None
  type: NodePort
